# wordle-jp

./: .gitignore  CMakeLists.txt  CMakePresets.json  db_manifest.txt  vcpkg.json
.github/workflows/: build-db.yml
code-gen/: dictionary_constants.hpp  dictionary_entries.hpp  dictionary_radicals.hpp
db/japanese/characters/kanji/: create_kanji.sql  insert_kanji.sql
db/japanese/characters/kanji_radicals/: create_kanji_radicals.sql  insert_kanji_radicals.sql
db/japanese/characters/radicals/: create_radicals.sql  insert_radicals.sql
db/japanese/classification/kanji/: create_kanji.sql  insert_kanji.sql
db/japanese/dictionary/kanji/: create_kanji.sql  insert_kanji.sql
db/japanese/dictionary/kanji_kunyomi/: create_kanji_kunyomi.sql  insert_kanji_kunyomi.sql
db/japanese/dictionary/kanji_meaning/: create_kanji_meaning.sql  insert_kanji_meaning.sql
db/japanese/dictionary/kanji_onyomi/: create_kanji_onyomi.sql  insert_kanji_onyomi.sql
db/japanese/dictionary/radicals/: create_radicals.sql  insert_radicals.sql
scripts/: build_db.py  build_db.sh  generate_dictionary.py
src/: CMakeLists.txt  dictionary.h  main.cpp
src/dictionary/: dictionary.hpp
